<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.daoud.fragment.RetourFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutEntete">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/RetourView"
            android:text="@string/retour_string"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@android:color/holo_blue_dark"
            android:padding="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayoutEditText"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/linearLayoutEntete"
        android:layout_alignLeft="@+id/linearLayoutEntete"
        android:layout_alignStart="@+id/linearLayoutEntete">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editTextNumOperation"
            android:hint="@string/numop_hint_string"
            android:background="@drawable/edit_bg"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editTextNameClt"
            android:hint="@string/nameclt_hint_string"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_bg"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editTextAvance"
            android:hint="@string/avance_hint_string"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_bg"/>

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editTextReste"
            android:hint="@string/reste_hint_string"
            android:background="@drawable/edit_bg"/>

        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/editTextPrix"
            android:hint="@string/prix_hint_string"
            android:background="@drawable/edit_bg"/>
    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:baselineAligned="false"
            android:id="@+id/linearLayoutButton"
            android:orientation="horizontal"
            android:layout_below="@+id/linearLayoutEditText"
            android:layout_alignLeft="@+id/linearLayoutEditText"
            android:layout_alignStart="@+id/linearLayoutEditText"
            android:layout_gravity="center"
            android:gravity="center">
            <ImageButton
                android:id="@+id/imageButtonAjout"
                android:layout_marginLeft="15dp"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_add" />

            <ImageButton
                android:id="@+id/imageButtonModif"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_edit"
                android:layout_marginLeft="15dp"/>
            <ImageButton
                android:id="@+id/imageButtonSupp"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_delete"
                android:layout_marginLeft="15dp"/>
            <ImageButton
                android:id="@+id/imagebuttonAffiche"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_affiche"
                android:layout_marginLeft="15dp"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
